Fix back button in modals on Firefox
Thanks @towerofnix!

--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -101,6 +101,7 @@ $sides: 20rem;
 .header-item-close {
     flex-basis: $sides;
     justify-content: flex-end;
+    z-index: 1;
 }
 
 .full-screen .header-item-close {
